[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/battle_map/battle_map.gd" type="Script" id=1]
[ext_resource path="res://src/units/enemy_armored.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/units/unit_armored.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/battle_map/camera_controller.gd" type="Script" id=4]
[ext_resource path="res://assets/img/move_range_marker.png" type="Texture" id=5]
[ext_resource path="res://assets/img/attack_range_marker.png" type="Texture" id=6]

[node name="map" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="range_markers" type="Control" parent="."]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_range" type="TextureRect" parent="range_markers"]
visible = false
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_range" type="TextureRect" parent="range_markers"]
visible = false
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_units" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unit" parent="player_units" instance=ExtResource( 3 )]
margin_left = -998.354
margin_top = -376.234
margin_right = -998.354
margin_bottom = -376.234

[node name="unit2" parent="player_units" instance=ExtResource( 3 )]
margin_left = 611.203
margin_top = 288.97
margin_right = 611.203
margin_bottom = 288.97

[node name="unit3" parent="player_units" instance=ExtResource( 3 )]
margin_left = 1157.62
margin_top = -952.349
margin_right = 1157.62
margin_bottom = -952.349

[node name="enemy_units" type="Control" parent="."]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unit" parent="enemy_units" instance=ExtResource( 2 )]
margin_left = -411.674
margin_top = -594.903
margin_right = -411.674
margin_bottom = -594.903

[node name="unit2" parent="enemy_units" instance=ExtResource( 2 )]
margin_left = 442.243
margin_top = -1168.69
margin_right = 442.243
margin_bottom = -1168.69

[node name="cam" type="Camera2D" parent="."]
skew = 4.37114e-08
current = true
zoom = Vector2( 2, 2 )
script = ExtResource( 4 )

[node name="ui_layer" type="CanvasLayer" parent="."]

[node name="vbox" type="VBoxContainer" parent="ui_layer"]
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 0.1
margin_top = 36.0
margin_right = -36.0
grow_horizontal = 0
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_turn_btn" type="Button" parent="ui_layer/vbox"]
margin_right = 156.0
margin_bottom = 20.0
text = "END TURN"

[node name="pause_btn" type="Button" parent="ui_layer/vbox"]
margin_top = 29.0
margin_right = 156.0
margin_bottom = 49.0
text = "PAUSE"

[node name="Label" type="Label" parent="ui_layer"]
margin_left = 2.8316
margin_top = 12.2704
margin_right = 42.8316
margin_bottom = 26.2704
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ui_layer"]
margin_left = 3.46657
margin_top = 35.8672
margin_right = 43.4666
margin_bottom = 49.8672
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ui_layer"]
margin_left = 2.8316
margin_top = 68.9028
margin_right = 42.8316
margin_bottom = 82.9028
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="ui_layer/vbox/end_turn_btn" to="." method="_on_end_turn_btn_up"]
